csvpath/matching/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    NAME
    NAME_LINE

Grammar

Rule 0     S' -> match_part
Rule 1     match_part -> LEFT_BRACKET expression RIGHT_BRACKET
Rule 2     match_part -> LEFT_BRACKET expressions RIGHT_BRACKET
Rule 3     expressions -> expression
Rule 4     expressions -> expression COMMENT
Rule 5     expressions -> expressions expression
Rule 6     expressions -> COMMENT expressions
Rule 7     expression -> function
Rule 8     expression -> assignment_or_equality
Rule 9     function -> SIMPLE_NAME OPEN_PAREN CLOSE_PAREN
Rule 10    function -> SIMPLE_NAME OPEN_PAREN equality CLOSE_PAREN
Rule 11    function -> SIMPLE_NAME OPEN_PAREN function CLOSE_PAREN
Rule 12    function -> SIMPLE_NAME OPEN_PAREN term CLOSE_PAREN
Rule 13    function -> SIMPLE_NAME OPEN_PAREN var_or_header CLOSE_PAREN
Rule 14    assignment_or_equality -> equality
Rule 15    assignment_or_equality -> assignment
Rule 16    equality -> function op term
Rule 17    equality -> function op function
Rule 18    equality -> function op var_or_header
Rule 19    equality -> function DO assignment_or_equality
Rule 20    equality -> var DO assignment_or_equality
Rule 21    equality -> var DO function
Rule 22    equality -> function DO function
Rule 23    equality -> equality DO assignment_or_equality
Rule 24    equality -> equality DO function
Rule 25    equality -> var_or_header op function
Rule 26    equality -> var_or_header op term
Rule 27    equality -> var_or_header op var_or_header
Rule 28    equality -> term op var_or_header
Rule 29    equality -> term op term
Rule 30    equality -> term op function
Rule 31    equality -> equality op equality
Rule 32    equality -> equality op term
Rule 33    equality -> equality op function
Rule 34    op -> EQUALS
Rule 35    op -> LT
Rule 36    op -> GT
Rule 37    op -> STAR
Rule 38    op -> PLUS
Rule 39    op -> MINUS
Rule 40    op -> COMMA
Rule 41    assignment -> var ASSIGNMENT var
Rule 42    assignment -> var ASSIGNMENT term
Rule 43    assignment -> var ASSIGNMENT function
Rule 44    assignment -> var ASSIGNMENT header
Rule 45    term -> QUOTED
Rule 46    term -> QUOTE DATE QUOTE
Rule 47    term -> QUOTE NUMBER QUOTE
Rule 48    term -> NUMBER
Rule 49    term -> REGEX
Rule 50    var_or_header -> header
Rule 51    var_or_header -> var
Rule 52    var -> VAR_SYM SIMPLE_NAME
Rule 53    header -> HEADER_SYM SIMPLE_NAME
Rule 54    header -> HEADER_SYM NUMBER
Rule 55    header -> HEADER_SYM QUOTED

Terminals, with rules where they appear

ASSIGNMENT           : 41 42 43 44
CLOSE_PAREN          : 9 10 11 12 13
COMMA                : 40
COMMENT              : 4 6
DATE                 : 46
DO                   : 19 20 21 22 23 24
EQUALS               : 34
GT                   : 36
HEADER_SYM           : 53 54 55
LEFT_BRACKET         : 1 2
LT                   : 35
MINUS                : 39
NAME                 : 
NAME_LINE            : 
NUMBER               : 47 48 54
OPEN_PAREN           : 9 10 11 12 13
PLUS                 : 38
QUOTE                : 46 46 47 47
QUOTED               : 45 55
REGEX                : 49
RIGHT_BRACKET        : 1 2
SIMPLE_NAME          : 9 10 11 12 13 52 53
STAR                 : 37
VAR_SYM              : 52
error                : 

Nonterminals, with rules where they appear

assignment           : 15
assignment_or_equality : 8 19 20 23
equality             : 10 14 23 24 31 31 32 33
expression           : 1 3 4 5
expressions          : 2 5 6
function             : 7 11 16 17 17 18 19 21 22 22 24 25 30 33 43
header               : 44 50
match_part           : 0
op                   : 16 17 18 25 26 27 28 29 30 31 32 33
term                 : 12 16 26 28 29 29 30 32 42
var                  : 20 21 41 41 42 43 44 51
var_or_header        : 13 18 25 26 27 27 28

Parsing method: LALR

state 0

    (0) S' -> . match_part
    (1) match_part -> . LEFT_BRACKET expression RIGHT_BRACKET
    (2) match_part -> . LEFT_BRACKET expressions RIGHT_BRACKET

    LEFT_BRACKET    shift and go to state 2

    match_part                     shift and go to state 1

state 1

    (0) S' -> match_part .



state 2

    (1) match_part -> LEFT_BRACKET . expression RIGHT_BRACKET
    (2) match_part -> LEFT_BRACKET . expressions RIGHT_BRACKET
    (7) expression -> . function
    (8) expression -> . assignment_or_equality
    (3) expressions -> . expression
    (4) expressions -> . expression COMMENT
    (5) expressions -> . expressions expression
    (6) expressions -> . COMMENT expressions
    (9) function -> . SIMPLE_NAME OPEN_PAREN CLOSE_PAREN
    (10) function -> . SIMPLE_NAME OPEN_PAREN equality CLOSE_PAREN
    (11) function -> . SIMPLE_NAME OPEN_PAREN function CLOSE_PAREN
    (12) function -> . SIMPLE_NAME OPEN_PAREN term CLOSE_PAREN
    (13) function -> . SIMPLE_NAME OPEN_PAREN var_or_header CLOSE_PAREN
    (14) assignment_or_equality -> . equality
    (15) assignment_or_equality -> . assignment
    (16) equality -> . function op term
    (17) equality -> . function op function
    (18) equality -> . function op var_or_header
    (19) equality -> . function DO assignment_or_equality
    (20) equality -> . var DO assignment_or_equality
    (21) equality -> . var DO function
    (22) equality -> . function DO function
    (23) equality -> . equality DO assignment_or_equality
    (24) equality -> . equality DO function
    (25) equality -> . var_or_header op function
    (26) equality -> . var_or_header op term
    (27) equality -> . var_or_header op var_or_header
    (28) equality -> . term op var_or_header
    (29) equality -> . term op term
    (30) equality -> . term op function
    (31) equality -> . equality op equality
    (32) equality -> . equality op term
    (33) equality -> . equality op function
    (41) assignment -> . var ASSIGNMENT var
    (42) assignment -> . var ASSIGNMENT term
    (43) assignment -> . var ASSIGNMENT function
    (44) assignment -> . var ASSIGNMENT header
    (52) var -> . VAR_SYM SIMPLE_NAME
    (50) var_or_header -> . header
    (51) var_or_header -> . var
    (45) term -> . QUOTED
    (46) term -> . QUOTE DATE QUOTE
    (47) term -> . QUOTE NUMBER QUOTE
    (48) term -> . NUMBER
    (49) term -> . REGEX
    (53) header -> . HEADER_SYM SIMPLE_NAME
    (54) header -> . HEADER_SYM NUMBER
    (55) header -> . HEADER_SYM QUOTED

    COMMENT         shift and go to state 7
    SIMPLE_NAME     shift and go to state 8
    VAR_SYM         shift and go to state 15
    QUOTED          shift and go to state 16
    QUOTE           shift and go to state 17
    NUMBER          shift and go to state 18
    REGEX           shift and go to state 19
    HEADER_SYM      shift and go to state 20

    expression                     shift and go to state 3
    expressions                    shift and go to state 4
    function                       shift and go to state 5
    assignment_or_equality         shift and go to state 6
    equality                       shift and go to state 9
    term                           shift and go to state 10
    var_or_header                  shift and go to state 11
    assignment                     shift and go to state 12
    var                            shift and go to state 13
    header                         shift and go to state 14

state 3

    (1) match_part -> LEFT_BRACKET expression . RIGHT_BRACKET
    (3) expressions -> expression .
    (4) expressions -> expression . COMMENT

  ! shift/reduce conflict for RIGHT_BRACKET resolved as shift
    RIGHT_BRACKET   shift and go to state 21
    SIMPLE_NAME     reduce using rule 3 (expressions -> expression .)
    VAR_SYM         reduce using rule 3 (expressions -> expression .)
    QUOTED          reduce using rule 3 (expressions -> expression .)
    QUOTE           reduce using rule 3 (expressions -> expression .)
    NUMBER          reduce using rule 3 (expressions -> expression .)
    REGEX           reduce using rule 3 (expressions -> expression .)
    HEADER_SYM      reduce using rule 3 (expressions -> expression .)
    COMMENT         shift and go to state 22

  ! RIGHT_BRACKET   [ reduce using rule 3 (expressions -> expression .) ]


state 4

    (2) match_part -> LEFT_BRACKET expressions . RIGHT_BRACKET
    (5) expressions -> expressions . expression
    (7) expression -> . function
    (8) expression -> . assignment_or_equality
    (9) function -> . SIMPLE_NAME OPEN_PAREN CLOSE_PAREN
    (10) function -> . SIMPLE_NAME OPEN_PAREN equality CLOSE_PAREN
    (11) function -> . SIMPLE_NAME OPEN_PAREN function CLOSE_PAREN
    (12) function -> . SIMPLE_NAME OPEN_PAREN term CLOSE_PAREN
    (13) function -> . SIMPLE_NAME OPEN_PAREN var_or_header CLOSE_PAREN
    (14) assignment_or_equality -> . equality
    (15) assignment_or_equality -> . assignment
    (16) equality -> . function op term
    (17) equality -> . function op function
    (18) equality -> . function op var_or_header
    (19) equality -> . function DO assignment_or_equality
    (20) equality -> . var DO assignment_or_equality
    (21) equality -> . var DO function
    (22) equality -> . function DO function
    (23) equality -> . equality DO assignment_or_equality
    (24) equality -> . equality DO function
    (25) equality -> . var_or_header op function
    (26) equality -> . var_or_header op term
    (27) equality -> . var_or_header op var_or_header
    (28) equality -> . term op var_or_header
    (29) equality -> . term op term
    (30) equality -> . term op function
    (31) equality -> . equality op equality
    (32) equality -> . equality op term
    (33) equality -> . equality op function
    (41) assignment -> . var ASSIGNMENT var
    (42) assignment -> . var ASSIGNMENT term
    (43) assignment -> . var ASSIGNMENT function
    (44) assignment -> . var ASSIGNMENT header
    (52) var -> . VAR_SYM SIMPLE_NAME
    (50) var_or_header -> . header
    (51) var_or_header -> . var
    (45) term -> . QUOTED
    (46) term -> . QUOTE DATE QUOTE
    (47) term -> . QUOTE NUMBER QUOTE
    (48) term -> . NUMBER
    (49) term -> . REGEX
    (53) header -> . HEADER_SYM SIMPLE_NAME
    (54) header -> . HEADER_SYM NUMBER
    (55) header -> . HEADER_SYM QUOTED

    RIGHT_BRACKET   shift and go to state 23
    SIMPLE_NAME     shift and go to state 8
    VAR_SYM         shift and go to state 15
    QUOTED          shift and go to state 16
    QUOTE           shift and go to state 17
    NUMBER          shift and go to state 18
    REGEX           shift and go to state 19
    HEADER_SYM      shift and go to state 20

    expression                     shift and go to state 24
    function                       shift and go to state 5
    assignment_or_equality         shift and go to state 6
    equality                       shift and go to state 9
    term                           shift and go to state 10
    var_or_header                  shift and go to state 11
    assignment                     shift and go to state 12
    var                            shift and go to state 13
    header                         shift and go to state 14

state 5

    (7) expression -> function .
    (16) equality -> function . op term
    (17) equality -> function . op function
    (18) equality -> function . op var_or_header
    (19) equality -> function . DO assignment_or_equality
    (22) equality -> function . DO function
    (34) op -> . EQUALS
    (35) op -> . LT
    (36) op -> . GT
    (37) op -> . STAR
    (38) op -> . PLUS
    (39) op -> . MINUS
    (40) op -> . COMMA

    RIGHT_BRACKET   reduce using rule 7 (expression -> function .)
    COMMENT         reduce using rule 7 (expression -> function .)
    SIMPLE_NAME     reduce using rule 7 (expression -> function .)
    VAR_SYM         reduce using rule 7 (expression -> function .)
    QUOTED          reduce using rule 7 (expression -> function .)
    QUOTE           reduce using rule 7 (expression -> function .)
    NUMBER          reduce using rule 7 (expression -> function .)
    REGEX           reduce using rule 7 (expression -> function .)
    HEADER_SYM      reduce using rule 7 (expression -> function .)
    DO              shift and go to state 26
    EQUALS          shift and go to state 27
    LT              shift and go to state 28
    GT              shift and go to state 29
    STAR            shift and go to state 30
    PLUS            shift and go to state 31
    MINUS           shift and go to state 32
    COMMA           shift and go to state 33

    op                             shift and go to state 25

state 6

    (8) expression -> assignment_or_equality .

    RIGHT_BRACKET   reduce using rule 8 (expression -> assignment_or_equality .)
    COMMENT         reduce using rule 8 (expression -> assignment_or_equality .)
    SIMPLE_NAME     reduce using rule 8 (expression -> assignment_or_equality .)
    VAR_SYM         reduce using rule 8 (expression -> assignment_or_equality .)
    QUOTED          reduce using rule 8 (expression -> assignment_or_equality .)
    QUOTE           reduce using rule 8 (expression -> assignment_or_equality .)
    NUMBER          reduce using rule 8 (expression -> assignment_or_equality .)
    REGEX           reduce using rule 8 (expression -> assignment_or_equality .)
    HEADER_SYM      reduce using rule 8 (expression -> assignment_or_equality .)


state 7

    (6) expressions -> COMMENT . expressions
    (3) expressions -> . expression
    (4) expressions -> . expression COMMENT
    (5) expressions -> . expressions expression
    (6) expressions -> . COMMENT expressions
    (7) expression -> . function
    (8) expression -> . assignment_or_equality
    (9) function -> . SIMPLE_NAME OPEN_PAREN CLOSE_PAREN
    (10) function -> . SIMPLE_NAME OPEN_PAREN equality CLOSE_PAREN
    (11) function -> . SIMPLE_NAME OPEN_PAREN function CLOSE_PAREN
    (12) function -> . SIMPLE_NAME OPEN_PAREN term CLOSE_PAREN
    (13) function -> . SIMPLE_NAME OPEN_PAREN var_or_header CLOSE_PAREN
    (14) assignment_or_equality -> . equality
    (15) assignment_or_equality -> . assignment
    (16) equality -> . function op term
    (17) equality -> . function op function
    (18) equality -> . function op var_or_header
    (19) equality -> . function DO assignment_or_equality
    (20) equality -> . var DO assignment_or_equality
    (21) equality -> . var DO function
    (22) equality -> . function DO function
    (23) equality -> . equality DO assignment_or_equality
    (24) equality -> . equality DO function
    (25) equality -> . var_or_header op function
    (26) equality -> . var_or_header op term
    (27) equality -> . var_or_header op var_or_header
    (28) equality -> . term op var_or_header
    (29) equality -> . term op term
    (30) equality -> . term op function
    (31) equality -> . equality op equality
    (32) equality -> . equality op term
    (33) equality -> . equality op function
    (41) assignment -> . var ASSIGNMENT var
    (42) assignment -> . var ASSIGNMENT term
    (43) assignment -> . var ASSIGNMENT function
    (44) assignment -> . var ASSIGNMENT header
    (52) var -> . VAR_SYM SIMPLE_NAME
    (50) var_or_header -> . header
    (51) var_or_header -> . var
    (45) term -> . QUOTED
    (46) term -> . QUOTE DATE QUOTE
    (47) term -> . QUOTE NUMBER QUOTE
    (48) term -> . NUMBER
    (49) term -> . REGEX
    (53) header -> . HEADER_SYM SIMPLE_NAME
    (54) header -> . HEADER_SYM NUMBER
    (55) header -> . HEADER_SYM QUOTED

    COMMENT         shift and go to state 7
    SIMPLE_NAME     shift and go to state 8
    VAR_SYM         shift and go to state 15
    QUOTED          shift and go to state 16
    QUOTE           shift and go to state 17
    NUMBER          shift and go to state 18
    REGEX           shift and go to state 19
    HEADER_SYM      shift and go to state 20

    expressions                    shift and go to state 34
    expression                     shift and go to state 35
    function                       shift and go to state 5
    assignment_or_equality         shift and go to state 6
    equality                       shift and go to state 9
    term                           shift and go to state 10
    var_or_header                  shift and go to state 11
    assignment                     shift and go to state 12
    var                            shift and go to state 13
    header                         shift and go to state 14

state 8

    (9) function -> SIMPLE_NAME . OPEN_PAREN CLOSE_PAREN
    (10) function -> SIMPLE_NAME . OPEN_PAREN equality CLOSE_PAREN
    (11) function -> SIMPLE_NAME . OPEN_PAREN function CLOSE_PAREN
    (12) function -> SIMPLE_NAME . OPEN_PAREN term CLOSE_PAREN
    (13) function -> SIMPLE_NAME . OPEN_PAREN var_or_header CLOSE_PAREN

    OPEN_PAREN      shift and go to state 36


state 9

    (14) assignment_or_equality -> equality .
    (23) equality -> equality . DO assignment_or_equality
    (24) equality -> equality . DO function
    (31) equality -> equality . op equality
    (32) equality -> equality . op term
    (33) equality -> equality . op function
    (34) op -> . EQUALS
    (35) op -> . LT
    (36) op -> . GT
    (37) op -> . STAR
    (38) op -> . PLUS
    (39) op -> . MINUS
    (40) op -> . COMMA

  ! shift/reduce conflict for DO resolved as shift
  ! shift/reduce conflict for EQUALS resolved as shift
  ! shift/reduce conflict for LT resolved as shift
  ! shift/reduce conflict for GT resolved as shift
  ! shift/reduce conflict for STAR resolved as shift
  ! shift/reduce conflict for PLUS resolved as shift
  ! shift/reduce conflict for MINUS resolved as shift
  ! shift/reduce conflict for COMMA resolved as shift
    RIGHT_BRACKET   reduce using rule 14 (assignment_or_equality -> equality .)
    COMMENT         reduce using rule 14 (assignment_or_equality -> equality .)
    SIMPLE_NAME     reduce using rule 14 (assignment_or_equality -> equality .)
    VAR_SYM         reduce using rule 14 (assignment_or_equality -> equality .)
    QUOTED          reduce using rule 14 (assignment_or_equality -> equality .)
    QUOTE           reduce using rule 14 (assignment_or_equality -> equality .)
    NUMBER          reduce using rule 14 (assignment_or_equality -> equality .)
    REGEX           reduce using rule 14 (assignment_or_equality -> equality .)
    HEADER_SYM      reduce using rule 14 (assignment_or_equality -> equality .)
    CLOSE_PAREN     reduce using rule 14 (assignment_or_equality -> equality .)
    DO              shift and go to state 37
    EQUALS          shift and go to state 27
    LT              shift and go to state 28
    GT              shift and go to state 29
    STAR            shift and go to state 30
    PLUS            shift and go to state 31
    MINUS           shift and go to state 32
    COMMA           shift and go to state 33

  ! DO              [ reduce using rule 14 (assignment_or_equality -> equality .) ]
  ! EQUALS          [ reduce using rule 14 (assignment_or_equality -> equality .) ]
  ! LT              [ reduce using rule 14 (assignment_or_equality -> equality .) ]
  ! GT              [ reduce using rule 14 (assignment_or_equality -> equality .) ]
  ! STAR            [ reduce using rule 14 (assignment_or_equality -> equality .) ]
  ! PLUS            [ reduce using rule 14 (assignment_or_equality -> equality .) ]
  ! MINUS           [ reduce using rule 14 (assignment_or_equality -> equality .) ]
  ! COMMA           [ reduce using rule 14 (assignment_or_equality -> equality .) ]

    op                             shift and go to state 38

state 10

    (28) equality -> term . op var_or_header
    (29) equality -> term . op term
    (30) equality -> term . op function
    (34) op -> . EQUALS
    (35) op -> . LT
    (36) op -> . GT
    (37) op -> . STAR
    (38) op -> . PLUS
    (39) op -> . MINUS
    (40) op -> . COMMA

    EQUALS          shift and go to state 27
    LT              shift and go to state 28
    GT              shift and go to state 29
    STAR            shift and go to state 30
    PLUS            shift and go to state 31
    MINUS           shift and go to state 32
    COMMA           shift and go to state 33

    op                             shift and go to state 39

state 11

    (25) equality -> var_or_header . op function
    (26) equality -> var_or_header . op term
    (27) equality -> var_or_header . op var_or_header
    (34) op -> . EQUALS
    (35) op -> . LT
    (36) op -> . GT
    (37) op -> . STAR
    (38) op -> . PLUS
    (39) op -> . MINUS
    (40) op -> . COMMA

    EQUALS          shift and go to state 27
    LT              shift and go to state 28
    GT              shift and go to state 29
    STAR            shift and go to state 30
    PLUS            shift and go to state 31
    MINUS           shift and go to state 32
    COMMA           shift and go to state 33

    op                             shift and go to state 40

state 12

    (15) assignment_or_equality -> assignment .

    RIGHT_BRACKET   reduce using rule 15 (assignment_or_equality -> assignment .)
    COMMENT         reduce using rule 15 (assignment_or_equality -> assignment .)
    SIMPLE_NAME     reduce using rule 15 (assignment_or_equality -> assignment .)
    VAR_SYM         reduce using rule 15 (assignment_or_equality -> assignment .)
    QUOTED          reduce using rule 15 (assignment_or_equality -> assignment .)
    QUOTE           reduce using rule 15 (assignment_or_equality -> assignment .)
    NUMBER          reduce using rule 15 (assignment_or_equality -> assignment .)
    REGEX           reduce using rule 15 (assignment_or_equality -> assignment .)
    HEADER_SYM      reduce using rule 15 (assignment_or_equality -> assignment .)
    DO              reduce using rule 15 (assignment_or_equality -> assignment .)
    EQUALS          reduce using rule 15 (assignment_or_equality -> assignment .)
    LT              reduce using rule 15 (assignment_or_equality -> assignment .)
    GT              reduce using rule 15 (assignment_or_equality -> assignment .)
    STAR            reduce using rule 15 (assignment_or_equality -> assignment .)
    PLUS            reduce using rule 15 (assignment_or_equality -> assignment .)
    MINUS           reduce using rule 15 (assignment_or_equality -> assignment .)
    COMMA           reduce using rule 15 (assignment_or_equality -> assignment .)
    CLOSE_PAREN     reduce using rule 15 (assignment_or_equality -> assignment .)


state 13

    (20) equality -> var . DO assignment_or_equality
    (21) equality -> var . DO function
    (41) assignment -> var . ASSIGNMENT var
    (42) assignment -> var . ASSIGNMENT term
    (43) assignment -> var . ASSIGNMENT function
    (44) assignment -> var . ASSIGNMENT header
    (51) var_or_header -> var .

    DO              shift and go to state 41
    ASSIGNMENT      shift and go to state 42
    EQUALS          reduce using rule 51 (var_or_header -> var .)
    LT              reduce using rule 51 (var_or_header -> var .)
    GT              reduce using rule 51 (var_or_header -> var .)
    STAR            reduce using rule 51 (var_or_header -> var .)
    PLUS            reduce using rule 51 (var_or_header -> var .)
    MINUS           reduce using rule 51 (var_or_header -> var .)
    COMMA           reduce using rule 51 (var_or_header -> var .)


state 14

    (50) var_or_header -> header .

    EQUALS          reduce using rule 50 (var_or_header -> header .)
    LT              reduce using rule 50 (var_or_header -> header .)
    GT              reduce using rule 50 (var_or_header -> header .)
    STAR            reduce using rule 50 (var_or_header -> header .)
    PLUS            reduce using rule 50 (var_or_header -> header .)
    MINUS           reduce using rule 50 (var_or_header -> header .)
    COMMA           reduce using rule 50 (var_or_header -> header .)
    DO              reduce using rule 50 (var_or_header -> header .)
    RIGHT_BRACKET   reduce using rule 50 (var_or_header -> header .)
    COMMENT         reduce using rule 50 (var_or_header -> header .)
    SIMPLE_NAME     reduce using rule 50 (var_or_header -> header .)
    VAR_SYM         reduce using rule 50 (var_or_header -> header .)
    QUOTED          reduce using rule 50 (var_or_header -> header .)
    QUOTE           reduce using rule 50 (var_or_header -> header .)
    NUMBER          reduce using rule 50 (var_or_header -> header .)
    REGEX           reduce using rule 50 (var_or_header -> header .)
    HEADER_SYM      reduce using rule 50 (var_or_header -> header .)
    CLOSE_PAREN     reduce using rule 50 (var_or_header -> header .)


state 15

    (52) var -> VAR_SYM . SIMPLE_NAME

    SIMPLE_NAME     shift and go to state 43


state 16

    (45) term -> QUOTED .

    EQUALS          reduce using rule 45 (term -> QUOTED .)
    LT              reduce using rule 45 (term -> QUOTED .)
    GT              reduce using rule 45 (term -> QUOTED .)
    STAR            reduce using rule 45 (term -> QUOTED .)
    PLUS            reduce using rule 45 (term -> QUOTED .)
    MINUS           reduce using rule 45 (term -> QUOTED .)
    COMMA           reduce using rule 45 (term -> QUOTED .)
    DO              reduce using rule 45 (term -> QUOTED .)
    RIGHT_BRACKET   reduce using rule 45 (term -> QUOTED .)
    COMMENT         reduce using rule 45 (term -> QUOTED .)
    SIMPLE_NAME     reduce using rule 45 (term -> QUOTED .)
    VAR_SYM         reduce using rule 45 (term -> QUOTED .)
    QUOTED          reduce using rule 45 (term -> QUOTED .)
    QUOTE           reduce using rule 45 (term -> QUOTED .)
    NUMBER          reduce using rule 45 (term -> QUOTED .)
    REGEX           reduce using rule 45 (term -> QUOTED .)
    HEADER_SYM      reduce using rule 45 (term -> QUOTED .)
    CLOSE_PAREN     reduce using rule 45 (term -> QUOTED .)


state 17

    (46) term -> QUOTE . DATE QUOTE
    (47) term -> QUOTE . NUMBER QUOTE

    DATE            shift and go to state 44
    NUMBER          shift and go to state 45


state 18

    (48) term -> NUMBER .

    EQUALS          reduce using rule 48 (term -> NUMBER .)
    LT              reduce using rule 48 (term -> NUMBER .)
    GT              reduce using rule 48 (term -> NUMBER .)
    STAR            reduce using rule 48 (term -> NUMBER .)
    PLUS            reduce using rule 48 (term -> NUMBER .)
    MINUS           reduce using rule 48 (term -> NUMBER .)
    COMMA           reduce using rule 48 (term -> NUMBER .)
    DO              reduce using rule 48 (term -> NUMBER .)
    RIGHT_BRACKET   reduce using rule 48 (term -> NUMBER .)
    COMMENT         reduce using rule 48 (term -> NUMBER .)
    SIMPLE_NAME     reduce using rule 48 (term -> NUMBER .)
    VAR_SYM         reduce using rule 48 (term -> NUMBER .)
    QUOTED          reduce using rule 48 (term -> NUMBER .)
    QUOTE           reduce using rule 48 (term -> NUMBER .)
    NUMBER          reduce using rule 48 (term -> NUMBER .)
    REGEX           reduce using rule 48 (term -> NUMBER .)
    HEADER_SYM      reduce using rule 48 (term -> NUMBER .)
    CLOSE_PAREN     reduce using rule 48 (term -> NUMBER .)


state 19

    (49) term -> REGEX .

    EQUALS          reduce using rule 49 (term -> REGEX .)
    LT              reduce using rule 49 (term -> REGEX .)
    GT              reduce using rule 49 (term -> REGEX .)
    STAR            reduce using rule 49 (term -> REGEX .)
    PLUS            reduce using rule 49 (term -> REGEX .)
    MINUS           reduce using rule 49 (term -> REGEX .)
    COMMA           reduce using rule 49 (term -> REGEX .)
    DO              reduce using rule 49 (term -> REGEX .)
    RIGHT_BRACKET   reduce using rule 49 (term -> REGEX .)
    COMMENT         reduce using rule 49 (term -> REGEX .)
    SIMPLE_NAME     reduce using rule 49 (term -> REGEX .)
    VAR_SYM         reduce using rule 49 (term -> REGEX .)
    QUOTED          reduce using rule 49 (term -> REGEX .)
    QUOTE           reduce using rule 49 (term -> REGEX .)
    NUMBER          reduce using rule 49 (term -> REGEX .)
    REGEX           reduce using rule 49 (term -> REGEX .)
    HEADER_SYM      reduce using rule 49 (term -> REGEX .)
    CLOSE_PAREN     reduce using rule 49 (term -> REGEX .)


state 20

    (53) header -> HEADER_SYM . SIMPLE_NAME
    (54) header -> HEADER_SYM . NUMBER
    (55) header -> HEADER_SYM . QUOTED

    SIMPLE_NAME     shift and go to state 46
    NUMBER          shift and go to state 47
    QUOTED          shift and go to state 48


state 21

    (1) match_part -> LEFT_BRACKET expression RIGHT_BRACKET .

    $end            reduce using rule 1 (match_part -> LEFT_BRACKET expression RIGHT_BRACKET .)


state 22

    (4) expressions -> expression COMMENT .

    RIGHT_BRACKET   reduce using rule 4 (expressions -> expression COMMENT .)
    SIMPLE_NAME     reduce using rule 4 (expressions -> expression COMMENT .)
    VAR_SYM         reduce using rule 4 (expressions -> expression COMMENT .)
    QUOTED          reduce using rule 4 (expressions -> expression COMMENT .)
    QUOTE           reduce using rule 4 (expressions -> expression COMMENT .)
    NUMBER          reduce using rule 4 (expressions -> expression COMMENT .)
    REGEX           reduce using rule 4 (expressions -> expression COMMENT .)
    HEADER_SYM      reduce using rule 4 (expressions -> expression COMMENT .)


state 23

    (2) match_part -> LEFT_BRACKET expressions RIGHT_BRACKET .

    $end            reduce using rule 2 (match_part -> LEFT_BRACKET expressions RIGHT_BRACKET .)


state 24

    (5) expressions -> expressions expression .

    RIGHT_BRACKET   reduce using rule 5 (expressions -> expressions expression .)
    SIMPLE_NAME     reduce using rule 5 (expressions -> expressions expression .)
    VAR_SYM         reduce using rule 5 (expressions -> expressions expression .)
    QUOTED          reduce using rule 5 (expressions -> expressions expression .)
    QUOTE           reduce using rule 5 (expressions -> expressions expression .)
    NUMBER          reduce using rule 5 (expressions -> expressions expression .)
    REGEX           reduce using rule 5 (expressions -> expressions expression .)
    HEADER_SYM      reduce using rule 5 (expressions -> expressions expression .)


state 25

    (16) equality -> function op . term
    (17) equality -> function op . function
    (18) equality -> function op . var_or_header
    (45) term -> . QUOTED
    (46) term -> . QUOTE DATE QUOTE
    (47) term -> . QUOTE NUMBER QUOTE
    (48) term -> . NUMBER
    (49) term -> . REGEX
    (9) function -> . SIMPLE_NAME OPEN_PAREN CLOSE_PAREN
    (10) function -> . SIMPLE_NAME OPEN_PAREN equality CLOSE_PAREN
    (11) function -> . SIMPLE_NAME OPEN_PAREN function CLOSE_PAREN
    (12) function -> . SIMPLE_NAME OPEN_PAREN term CLOSE_PAREN
    (13) function -> . SIMPLE_NAME OPEN_PAREN var_or_header CLOSE_PAREN
    (50) var_or_header -> . header
    (51) var_or_header -> . var
    (53) header -> . HEADER_SYM SIMPLE_NAME
    (54) header -> . HEADER_SYM NUMBER
    (55) header -> . HEADER_SYM QUOTED
    (52) var -> . VAR_SYM SIMPLE_NAME

    QUOTED          shift and go to state 16
    QUOTE           shift and go to state 17
    NUMBER          shift and go to state 18
    REGEX           shift and go to state 19
    SIMPLE_NAME     shift and go to state 8
    HEADER_SYM      shift and go to state 20
    VAR_SYM         shift and go to state 15

    function                       shift and go to state 49
    term                           shift and go to state 50
    var_or_header                  shift and go to state 51
    header                         shift and go to state 14
    var                            shift and go to state 52

state 26

    (19) equality -> function DO . assignment_or_equality
    (22) equality -> function DO . function
    (14) assignment_or_equality -> . equality
    (15) assignment_or_equality -> . assignment
    (9) function -> . SIMPLE_NAME OPEN_PAREN CLOSE_PAREN
    (10) function -> . SIMPLE_NAME OPEN_PAREN equality CLOSE_PAREN
    (11) function -> . SIMPLE_NAME OPEN_PAREN function CLOSE_PAREN
    (12) function -> . SIMPLE_NAME OPEN_PAREN term CLOSE_PAREN
    (13) function -> . SIMPLE_NAME OPEN_PAREN var_or_header CLOSE_PAREN
    (16) equality -> . function op term
    (17) equality -> . function op function
    (18) equality -> . function op var_or_header
    (19) equality -> . function DO assignment_or_equality
    (20) equality -> . var DO assignment_or_equality
    (21) equality -> . var DO function
    (22) equality -> . function DO function
    (23) equality -> . equality DO assignment_or_equality
    (24) equality -> . equality DO function
    (25) equality -> . var_or_header op function
    (26) equality -> . var_or_header op term
    (27) equality -> . var_or_header op var_or_header
    (28) equality -> . term op var_or_header
    (29) equality -> . term op term
    (30) equality -> . term op function
    (31) equality -> . equality op equality
    (32) equality -> . equality op term
    (33) equality -> . equality op function
    (41) assignment -> . var ASSIGNMENT var
    (42) assignment -> . var ASSIGNMENT term
    (43) assignment -> . var ASSIGNMENT function
    (44) assignment -> . var ASSIGNMENT header
    (52) var -> . VAR_SYM SIMPLE_NAME
    (50) var_or_header -> . header
    (51) var_or_header -> . var
    (45) term -> . QUOTED
    (46) term -> . QUOTE DATE QUOTE
    (47) term -> . QUOTE NUMBER QUOTE
    (48) term -> . NUMBER
    (49) term -> . REGEX
    (53) header -> . HEADER_SYM SIMPLE_NAME
    (54) header -> . HEADER_SYM NUMBER
    (55) header -> . HEADER_SYM QUOTED

    SIMPLE_NAME     shift and go to state 8
    VAR_SYM         shift and go to state 15
    QUOTED          shift and go to state 16
    QUOTE           shift and go to state 17
    NUMBER          shift and go to state 18
    REGEX           shift and go to state 19
    HEADER_SYM      shift and go to state 20
